oxidite-macros/tests/ui/fail_non_struct.stderr
error: Model derive can only be used on structs
 --> tests/ui/fail_non_struct.rs:2:1
  |
2 | enum Bad {
  | ^^^^
