oxidite-macros/tests/ui/fail_non_struct.rs
#[derive(oxidite_macros::Model)]
enum Bad {
    A,
}

fn main() {}
